Fix application name and icon being broken on some Linux distributions because of CMP-3308